<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity_Form">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/form_card"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="28sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_card"
        android:backgroundTint="@color/white"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28sp"
        android:layout_marginBottom="-20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_text"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="closeForm"
                    android:src="@drawable/close_icon"
                    android:contentDescription="@string/Image_description"/>

            </RelativeLayout>
            
            <View
                android:layout_width="wrap_content"
                android:layout_height="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name_text"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NameInput"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:labelFor="@id/NameInput"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EmailInput"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PasswordInput"
                android:inputType="textPassword"
                android:autofillHints="password"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_text"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/GenderInput"
                android:alpha="0.8"
                android:padding="10sp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"
                    android:text="Masculino"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female"
                    android:text="Femenino"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/other"
                    android:text="Otro"/>

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:onClick="sendForm"
                android:text="@string/sign_up_text"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>